[Mac] Add two missing key equivalents in Edit>Find.

"Use Selection for Find" = Cmd+E
"Jump to Selection" = Cmd+J

Bug: 868405
Change-Id: I83a6e7fdecb21b5d9e0aabd2ecb8fc4483d7a273
Reviewed-on: https://chromium-review.googlesource.com/1153142
Reviewed-by: Erik Chen <erikchen@chromium.org>
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578820}
Former-commit-id: 71e508b91f4d835d0f6a6bc7a8f1ca61d4d48c7d